--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
 
           <div class="chat-footer">
             <div class="input-area">
-              <i class="fa-solid fa-paperclip icon-btn"></i>
+              <button class="icon-btn" id="btn-location" title="내 위치 확인" style="font-size: 1.1rem; margin-right: 5px;">
+                <i class="fa-solid fa-location-dot" style="color: #4B4EFC;"></i>
+              </button>
               <input type="text" placeholder="메시지를 입력하세요..." disabled>
               <button class="send-btn"><i class="fa-solid fa-paper-plane"></i></button>
             </div>
